infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: "true"  
spec:
  rules: 
    - host: www.argentickets.com.ar
      http:  
        paths:  
          - path: /api/users/?(.*)  
            pathType: Prefix 
            backend: 
              service: 
                name: auth-srv 
                port: 
                  number: 3000
          - path: /api/payments/?(.*)  
            pathType: Prefix 
            backend: 
              service: 
                name: payments-srv 
                port: 
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: tickets-srv
                port: 
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: orders-srv
                port: 
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations: 
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.argentickets.com.ar"
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes:io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http 
    - name: https
      port: 443
      protocol: TCP
      targetPort: https 
  selector:
    app.kubernetes.io/name: ingress-nginx 
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
